# ExResu_Me

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml
api/: features_routes.py  latex_routes.py  main.py  resume_generation.py
cli/: main.py
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
resume_engine/: __init__.py  config.py  resume_one_page.py  validation.py
resume_engine/ai/: __init__.py  gemini_models.py  generator.py  provider_ids.py  resume_normalize.py  router.py
resume_engine/ats/: __init__.py  keywords.py  scorer.py
resume_engine/db/: __init__.py  crud.py  database.py  models.py  settings_store.py
resume_engine/export/: __init__.py  docx_export.py  legacy_classic.py  pdf_export.py  txt_export.py
resume_engine/features/: __init__.py  coach.py  cover_letter.py  import_parser.py  interview.py  resume_file_parser.py
resume_engine/latex/: __init__.py  compiler.py  demo_data.py  generate.py  registry.py
resume_engine/schemas/: __init__.py  ats.py  profile.py  resume.py
scripts/: install-tectonic.ps1  restart-api.ps1  start-all.ps1  start-api.ps1  test_gemini_models.py
templates/: resume_template.html
tests/: test_ats_scorer.py  test_interview_prep.py  test_latex_compile.py  test_latex_generate.py  test_resume_normalize.py  test_resume_one_page.py  test_template_exports.py  test_templates.py
web/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+65 files in other folders)
