[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resume-builder"
version = "0.1.0"
description = "ATS-optimized resume builder with AI (Ollama + cloud APIs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-docx>=1.1.0",
    "reportlab>=4.2.0",
    "rake-nltk>=1.0.6",
    "nltk>=3.8.1",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "jinja2>=3.1.0",
    "phonenumbers>=8.13.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.scripts]
resume = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["resume_engine", "api", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
